--- a/src/main/resources/com/vertex/vos/receivingIOperations.fxml
+++ b/src/main/resources/com/vertex/vos/receivingIOperations.fxml
@@ -5,85 +5,107 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefWidth="1080.0" style="-fx-background-radius: 20px 0px 0px 0px; -fx-background-color: #f0f0f0;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.ReceivingIOperationsController">
-   <children>
-      <VBox AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+
+<ScrollPane fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.ReceivingIOperationsController">
+   <content>
+      <AnchorPane prefWidth="1080.0" style="-fx-background-radius: 20px 0px 0px 0px; -fx-background-color: #f0f0f0;" stylesheets="@assets/style.css">
          <children>
-            <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="text" stylesheets="@assets/style.css">
+            <VBox AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <HBox alignment="CENTER_LEFT" spacing="10.0">
+                  <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="text" stylesheets="@assets/style.css">
                      <children>
-                        <Label fx:id="companyNameHeaderLabel" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="header" stylesheets="@assets/style.css" text="Receiving" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER_LEFT" layoutX="40.0" layoutY="71.0" spacing="10.0">
-                     <children>
-                        <VBox layoutX="10.0" layoutY="10.0">
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
-                              <Label text="Purchase Order Number">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </Label>
-                              <ComboBox fx:id="poNumberTextField" editable="true" prefWidth="150.0" />
-                              <Label fx:id="poErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </Label>
+                              <Label fx:id="companyNameHeaderLabel" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="header" stylesheets="@assets/style.css" text="Receiving" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" layoutX="40.0" layoutY="71.0" spacing="10.0">
+                           <children>
+                              <VBox layoutX="10.0" layoutY="10.0">
+                                 <children>
+                                    <Label text="Purchase Order Number">
+                                       <VBox.margin>
+                                          <Insets left="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <ComboBox fx:id="poNumberTextField" editable="true" prefWidth="150.0" />
+                                    <Label fx:id="poErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                                       <VBox.margin>
+                                          <Insets left="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox layoutX="10.0" layoutY="10.0">
+                                 <children>
+                                    <Label text="Branch">
+                                       <VBox.margin>
+                                          <Insets left="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <ComboBox fx:id="branchComboBox" editable="true" prefWidth="150.0" />
+                                    <Label fx:id="branchErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                                       <VBox.margin>
+                                          <Insets left="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
+                        <TableView fx:id="productTableView" editable="true" minHeight="500.0" stylesheets="@assets/table.css">
+                           <columns>
+                              <TableColumn fx:id="productDescription" prefWidth="75.0" text="Description" />
+                              <TableColumn fx:id="productUnit" prefWidth="75.0" text="Unit" />
+                              <TableColumn fx:id="orderedQuantity" prefWidth="75.0" text="Ordered Quantity" />
+                              <TableColumn fx:id="receivedQuantity" prefWidth="75.0" text="Received Quantity" />
+                              <TableColumn fx:id="receivedUnitPrice" prefWidth="75.0" text="Received Unit Price" />
+                              <TableColumn fx:id="discount" prefWidth="75.0" text="Discount" />
+                              <TableColumn fx:id="netPrice" prefWidth="75.0" text="Net Price" />
+                              <TableColumn fx:id="netAmount" prefWidth="75.0" text="Net Amount" />
+                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                        <HBox fx:id="totalBox" alignment="CENTER_RIGHT" spacing="20.0">
+                           <children>
+                              <VBox fx:id="totalBoxLabels" alignment="CENTER_RIGHT" spacing="5.0">
+                                 <children>
+                                    <Label fx:id="vatable" layoutX="13.0" layoutY="10.0" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Vatable Sales" />
+                                    <Label fx:id="vatZeroRated" layoutX="13.0" layoutY="10.0" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Vat Zero-Rated Sales" />
+                                    <Label fx:id="vatExempt" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Vat Exempt Sales" />
+                                    <Label fx:id="vat" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Vat" />
+                                    <Label fx:id="amountPayable" style="-fx-font-size: 14;" styleClass="sub-header" stylesheets="@assets/style.css" text="Total Amount Payable" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
+                        <VBox alignment="TOP_RIGHT" layoutX="40.0" layoutY="242.0">
+                           <children>
+                              <Button fx:id="confirmButton" minWidth="250.0" mnemonicParsing="false" text="Confirm Receiving">
+                                 <styleClass>
+                                    <String fx:value="button" />
+                                    <String fx:value="text-input" />
+                                 </styleClass>
+                              </Button>
                            </children>
                         </VBox>
-                        <VBox layoutX="10.0" layoutY="10.0">
-                           <children>
-                              <Label text="Branch">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </Label>
-                              <ComboBox fx:id="branchComboBox" editable="true" prefWidth="150.0" />
-                              <Label fx:id="branchErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </Label>
-                           </children>
-                        </VBox>
                      </children>
-                  </HBox>
-                  <TableView fx:id="productTableView" editable="true" minHeight="500.0" stylesheets="@assets/table.css">
-                     <columns>
-                        <TableColumn fx:id="productDescription" prefWidth="75.0" text="Description" />
-                        <TableColumn fx:id="productUnit" prefWidth="75.0" text="Unit" />
-                        <TableColumn fx:id="orderedQuantity" prefWidth="75.0" text="Ordered Quantity" />
-                        <TableColumn fx:id="receivedQuantity" prefWidth="75.0" text="Received Quantity" />
-                     </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TableView>
-                  <VBox layoutX="40.0" layoutY="242.0">
-                     <children>
-                        <Button fx:id="confirmButton" minWidth="250.0" mnemonicParsing="false" text="Confirm Receiving">
-                           <styleClass>
-                              <String fx:value="button" />
-                              <String fx:value="text-input" />
-                           </styleClass>
-                        </Button>
-                     </children>
+                     <padding>
+                        <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
+                     </padding>
                   </VBox>
                </children>
-               <padding>
-                  <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
-               </padding>
             </VBox>
          </children>
-      </VBox>
-      <HBox alignment="CENTER" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
-   </children>
-</AnchorPane>
+      </AnchorPane>
+   </content>
+</ScrollPane>
