--- a/src/main/resources/com/vertex/vos/stockTransfer.fxml
+++ b/src/main/resources/com/vertex/vos/stockTransfer.fxml
@@ -5,6 +5,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableView?>
@@ -26,7 +27,7 @@
                            <children>
                               <VBox layoutX="172.0" AnchorPane.leftAnchor="0.0">
                                  <children>
-                                    <Label style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="header" stylesheets="@assets/style.css" text="Stock Transfer" />
+                                    <Label fx:id="stockTransferID" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="header" stylesheets="@assets/style.css" text="Stock Transfer" />
                                     <Label fx:id="date" style="-fx-font-size: 18; -fx-font-weight: 400; -fx-text-fill: #3E4756;" styleClass="header" stylesheets="@assets/style.css" text="2023-11-16" />
                                  </children>
                               </VBox>
@@ -68,6 +69,21 @@
                                     </Label>
                                     <ComboBox fx:id="targetBranch" editable="true" prefWidth="150.0" />
                                     <Label fx:id="targetBranchErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                                       <VBox.margin>
+                                          <Insets left="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox fx:id="leadDateBox">
+                                 <children>
+                                    <Label text="Lead Date">
+                                       <VBox.margin>
+                                          <Insets left="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <DatePicker fx:id="leadDate" />
+                                    <Label fx:id="leadDateErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
                                        <VBox.margin>
                                           <Insets left="10.0" />
                                        </VBox.margin>
