--- a/src/main/resources/com/vertex/vos/purchaseOrderEntryAccounting.fxml
+++ b/src/main/resources/com/vertex/vos/purchaseOrderEntryAccounting.fxml
@@ -16,13 +16,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="POAnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefWidth="800.0" style="-fx-background-radius: 20px 0px 0px 0px; -fx-background-color: #f0f0f0;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.PurchaseOrderEntryController">
+<AnchorPane fx:id="POAnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefWidth="800.0" style="-fx-background-radius: 20px 0px 0px 0px; -fx-background-color: #f0f0f0;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.PurchaseOrderEntryController">
    <children>
       <ScrollPane fitToHeight="true" fitToWidth="true" pannable="true" stylesheets="@assets/global.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
             <VBox fx:id="POContent" spacing="10.0" style="-fx-background-color: transparent;">
                <children>
-                  <VBox fx:id="POBox" prefHeight="200.0" prefWidth="100.0" spacing="10.0" style="-fx-background-color: transparent; -fx-border-color: transparent;" styleClass="text">
+                  <VBox fx:id="POBox" spacing="10.0" style="-fx-background-color: transparent; -fx-border-color: transparent;" styleClass="text">
                      <children>
                         <AnchorPane>
                            <children>
