--- a/src/main/resources/com/vertex/vos/receivingIOperations.fxml
+++ b/src/main/resources/com/vertex/vos/receivingIOperations.fxml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.ReceivingIOperationsController">
-   <content>
-      <AnchorPane prefWidth="1080.0" style="-fx-background-radius: 20px 0px 0px 0px; -fx-background-color: #f0f0f0;" stylesheets="@assets/style.css">
-         <children>
-            <VBox AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+
+<AnchorPane prefWidth="800.0" style="-fx-background-radius: 20px 0px 0px 0px; -fx-background-color: #f0f0f0;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.ReceivingIOperationsController">
+   <children>
+      <ScrollPane fitToHeight="true" fitToWidth="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <content>
+            <VBox>
                <children>
-                  <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="text" stylesheets="@assets/style.css">
+                  <VBox fx:id="receivingBox">
                      <children>
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
                               <Label fx:id="companyNameHeaderLabel" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="header" stylesheets="@assets/style.css" text="Receiving" />
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER_LEFT" layoutX="40.0" layoutY="71.0" spacing="10.0">
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
                               <VBox layoutX="10.0" layoutY="10.0">
                                  <children>
@@ -61,55 +62,32 @@
                               </VBox>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER_LEFT" layoutX="40.0" layoutY="71.0" spacing="10.0">
+                        <HBox fx:id="buttonsBox" alignment="CENTER_LEFT" spacing="10.0">
                            <children>
-                              <VBox layoutX="10.0" layoutY="10.0">
+                              <VBox fx:id="addInvoiceButton">
                                  <children>
-                                    <Label text="Invoice Receipt">
-                                       <VBox.margin>
-                                          <Insets left="10.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <TextField fx:id="invoiceReceipt" />
-                                    <Label fx:id="receiptNoErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
-                                       <VBox.margin>
-                                          <Insets left="10.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                 </children>
-                              </VBox>
-                              <VBox layoutX="10.0" layoutY="10.0">
-                                 <children>
-                                    <Label text="Receipt Date">
-                                       <VBox.margin>
-                                          <Insets left="10.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <DatePicker fx:id="receiptDate" />
-                                    <Label fx:id="receiptDateErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
-                                       <VBox.margin>
-                                          <Insets left="10.0" />
-                                       </VBox.margin>
-                                    </Label>
+                                    <HBox alignment="CENTER_LEFT">
+                                       <children>
+                                          <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@assets/icons/Add.png" />
+                                             </image>
+                                          </ImageView>
+                                          <Label fx:id="addInvoiceLabel" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-size: 15;" styleClass="sub-header" text="Add Invoice Receipt" />
+                                       </children>
+                                    </HBox>
                                  </children>
                               </VBox>
                            </children>
                         </HBox>
-                        <TableView fx:id="productTableView" editable="true" minHeight="500.0" stylesheets="@assets/table.css">
-                           <columns>
-                              <TableColumn fx:id="productDescription" prefWidth="75.0" text="Description" />
-                              <TableColumn fx:id="productUnit" prefWidth="75.0" text="Unit" />
-                              <TableColumn fx:id="orderedQuantity" prefWidth="75.0" text="Ordered Quantity" />
-                              <TableColumn fx:id="receivedQuantity" prefWidth="75.0" text="Received Quantity" />
-                              <TableColumn fx:id="receivedUnitPrice" prefWidth="75.0" text="Received Unit Price" />
-                              <TableColumn fx:id="discount" prefWidth="75.0" text="Discount" />
-                              <TableColumn fx:id="netPrice" prefWidth="75.0" text="Net Price" />
-                              <TableColumn fx:id="netAmount" prefWidth="75.0" text="Net Amount" />
-                           </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+                  <TabPane fx:id="invoiceTabs" tabClosingPolicy="UNAVAILABLE" />
+                  <VBox fx:id="footer">
+                     <children>
                         <HBox fx:id="totalBox" alignment="CENTER_RIGHT" spacing="20.0">
                            <children>
                               <VBox fx:id="totalBoxLabels" alignment="CENTER_RIGHT" spacing="5.0">
@@ -123,7 +101,7 @@
                               </VBox>
                            </children>
                         </HBox>
-                        <VBox alignment="TOP_RIGHT" layoutX="40.0" layoutY="242.0">
+                        <VBox alignment="TOP_RIGHT">
                            <children>
                               <Button fx:id="confirmButton" minWidth="250.0" mnemonicParsing="false" text="Confirm Receiving">
                                  <styleClass>
@@ -135,12 +113,16 @@
                         </VBox>
                      </children>
                      <padding>
-                        <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </VBox>
                </children>
             </VBox>
-         </children>
-      </AnchorPane>
-   </content>
-</ScrollPane>
+         </content>
+         <stylesheets>
+            <URL value="@assets/global.css" />
+            <URL value="@assets/table.css" />
+         </stylesheets>
+      </ScrollPane>
+   </children>
+</AnchorPane>
