--- a/src/main/resources/com/vertex/vos/assets/alert.css
+++ b/src/main/resources/com/vertex/vos/assets/alert.css
@@ -1,9 +1,12 @@
+/* alert.css */
+
+/* Custom style for the alert dialog */
 .custom-alert {
     -fx-background-color: #F5FAFF;
     -fx-background-radius: 10; /* Set the border radius to create rounded corners */
-        -fx-border-radius: 10; /* Set the border radius for border */
-        -fx-border-width: 1; /* Border width */
-        -fx-border-color: #FF0000;
+    -fx-border-radius: 10; /* Set the border radius for border */
+    -fx-border-width: 1; /* Border width */
+    -fx-border-color: #FF0000;
 }
 
 .custom-alert .dialog-pane {
@@ -21,16 +24,26 @@
     -fx-background-radius: 10px;
 }
 
-
-/* alert.css */
-
-/* Custom style for the OK button */
-.custom-alert .button-bar .button:default-button {
-    -fx-background-color: #5A90CF; /* Green background */
-    -fx-text-fill: white; /* White text */
+/* Custom style for the continue dialog */
+.custom-continue {
+    -fx-background-color: #FFFFFF; /* White background */
+    -fx-background-radius: 10; /* Set the border radius to create rounded corners */
+    -fx-border-radius: 10; /* Set the border radius for border */
+    -fx-border-width: 1; /* Border width */
+    -fx-border-color: #00FF00; /* Green border color */
 }
 
-.custom-alert .button-bar .button:cancel-button {
-    -fx-background-color: #5A90CF;
+.custom-continue .dialog-pane {
+    -fx-background-radius: 10px;
+}
+
+.custom-continue .button {
+    -fx-background-color: rgba(21, 93, 153, 0.5); /* 50% transparent #155d99 */
     -fx-text-fill: white;
+    -fx-background-radius: 10px;
+}
+
+.custom-continue .button:hover {
+    -fx-background-color: #5A90CF;
+    -fx-background-radius: 10px;
 }
