Product UX Updates Launch Optimizations - Loading Screen Implemetation Patched version for live done.

--- a/src/main/resources/com/vertex/vos/tableManager.fxml
+++ b/src/main/resources/com/vertex/vos/tableManager.fxml
@@ -29,13 +29,13 @@
                                  </image>
                               </ImageView>
                               <Label fx:id="tableHeader" style="-fx-font-size: 25px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-weight: 700;" styleClass="text-title-logo" text="Table Manager" />
-                              <VBox>
+                              <VBox spacing="5.0">
                                  <children>
                                     <ToggleButton fx:id="toggleButton" mnemonicParsing="false" visible="false" />
                                     <TextField fx:id="searchBar" promptText="Search" stylesheets="@assets/style.css" visible="false" />
                                  </children>
                               </VBox>
-                              <VBox>
+                              <VBox spacing="5.0">
                                  <children>
                                     <ToggleButton fx:id="toggleButton1" mnemonicParsing="false" visible="false" />
                                     <TextField fx:id="categoryBar" promptText="Search" stylesheets="@assets/style.css" visible="false" />
